[gd_scene load_steps=12 format=3 uid="uid://b7thekyah17uv"]

[ext_resource type="Script" path="res://src/TBWObject.gd" id="1_mt0sp"]
[ext_resource type="PackedScene" uid="uid://bcant1jf3ssg3" path="res://addons/interactive/interaction/Interactable.tscn" id="2_1vrcn"]
[ext_resource type="PackedScene" uid="uid://bun0xknbjk31g" path="res://data/scene/RobotWorld/screens/GameBoard1.tscn" id="2_d5kty"]
[ext_resource type="Script" path="res://src/ScreenInteraction.gd" id="2_yi31f"]
[ext_resource type="PackedScene" uid="uid://bo5to3cs55ywc" path="res://addons/interactive/props/chest/chest.tscn" id="3_7u06r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2pb33"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ta8v7"]
albedo_color = Color(0.957565, 0.834514, 0.892163, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b50bp"]
albedo_color = Color(0.999293, 0.896582, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ea4ua"]
albedo_color = Color(0.727465, 0.997733, 0.999999, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4h2p3"]
albedo_color = Color(0.867397, 0.910603, 0.991533, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_xe7iu"]
size = Vector3(50, 30, 1)

[node name="Screen1" type="StaticBody3D"]
script = ExtResource("1_mt0sp")

[node name="Screen_Object" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -9.234)
script = ExtResource("2_yi31f")

[node name="Billboard" type="CSGBox3D" parent="Screen_Object"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17, 0)
size = Vector3(52, 25, 1)
material = SubResource("StandardMaterial3D_2pb33")

[node name="sidebar_left" type="CSGBox3D" parent="Screen_Object"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -31.7329, 15.408, 4.78771)
size = Vector3(15, 23, 1)
material = SubResource("StandardMaterial3D_ta8v7")

[node name="sidebar_right" type="CSGBox3D" parent="Screen_Object"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 31.6585, 15.408, 4.788)
size = Vector3(15, 23, 1)
material = SubResource("StandardMaterial3D_b50bp")

[node name="Title" type="Label3D" parent="Screen_Object"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 25, 0.6)
text = "Snake Game"

[node name="Base_small" type="CSGCylinder3D" parent="Screen_Object"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 18.0825)
radius = 40.0
sides = 18
material = SubResource("StandardMaterial3D_ea4ua")

[node name="Interactable" parent="Screen_Object" instance=ExtResource("2_1vrcn")]
transform = Transform3D(80, 0, 0, 0, 80, 0, 0, 0, 80, 0, 18.5445, 25.3279)

[node name="Stand_group" type="Node3D" parent="Screen_Object"]

[node name="stand" type="CSGBox3D" parent="Screen_Object/Stand_group"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.00551, 0)
size = Vector3(55, 2, 3)
material = SubResource("StandardMaterial3D_4h2p3")

[node name="stand_left" type="CSGBox3D" parent="Screen_Object/Stand_group"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -31.6476, 4.006, 4.84948)
size = Vector3(15, 2, 3)
material = SubResource("StandardMaterial3D_4h2p3")

[node name="stand_right" type="CSGBox3D" parent="Screen_Object/Stand_group"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 31.9127, 4.006, 4.92977)
size = Vector3(15, 2, 3)
material = SubResource("StandardMaterial3D_4h2p3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.5, 0)
shape = SubResource("BoxShape3D_xe7iu")

[node name="Base" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.37889, 14.8211)
radius = 50.0
sides = 12

[node name="Walk" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.37889, 77.8549)
size = Vector3(15, 2, 30)

[node name="Gameboard" parent="." instance=ExtResource("2_d5kty")]
transform = Transform3D(0.999984, 0, -0.00565484, 0, 1, 0, 0.00565484, 0, 0.999984, 16.6295, 0, 92.6089)

[node name="chest" parent="." instance=ExtResource("3_7u06r")]

[connection signal="focused" from="Screen_Object/Interactable" to="Screen_Object" method="_on_interactable_focused"]
[connection signal="interacted" from="Screen_Object/Interactable" to="Screen_Object" method="_on_interactable_interacted"]
[connection signal="unfocused" from="Screen_Object/Interactable" to="Screen_Object" method="_on_interactable_unfocused"]
